# demonstrator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
protobuf/: README.md  convert.py  esf.proto  esf_pb2.py
src/: calculate.rs  data_types.rs
src/calculate/: pass_2.rs  pass_4.rs
tools/: yaml2json.py
web/: esf_pb2.js  index.html  index.js  package-lock.json  package.json  protobuf.js  webpack.config.js
web/static/: dogmaAttributes.json  dogmaAttributes.pb2  dogmaEffects.json  dogmaEffects.pb2  groupIDs.json  typeIDs.pb2
