[package]
name = "eveshipfit"
version = "0.1.0"
authors = ["Patric Stout <eveshipfit@truebrain.nl>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde-wasm-bindgen = "0.4"
strum = "0.25"
strum_macros = "0.25"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
